Split first-component and build using browserify
Simply run:
  $ npm run-script buildfc

--- a/first-component/index.html
+++ b/first-component/index.html
@@ -8,90 +8,6 @@
 <body>
   <div id="app"></div>
 
-  <script src="http://fb.me/react-0.13.1.js"></script>
-  <script src="http://fb.me/JSXTransformer-0.13.1.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.6.0/lodash.js"></script>
-  <script type="text/jsx">
-    /** @jsx React.DOM */
-
-    var MessageBox = React.createClass({
-
-      deleteMessage: function(message) {
-        var newMessages = _.without(this.state.messages, message);
-        this.setState({
-          messages: newMessages
-        });
-      },
-
-      handleAdd: function(e) {
-        var newMessage = this.refs.newMessage.getDOMNode().value;
-        var newMessages = this.state.messages.concat([newMessage]);
-        this.setState({
-          messages: newMessages
-        });
-      },
-
-      getInitialState: function() {
-        return {
-          isVisible: true,
-          messages: [
-                      'My tailor is rich',
-                      'Once upon a time',
-                      'En un lugar de la Mancha'
-                    ]
-        };
-      },
-
-      render: function() {
-        var inlineStyles = {
-          display: this.state.isVisible ? 'block' : 'none'
-        };
-
-        var messages = this.state.messages.map(function(message) {
-          return <SubMessage message={message} onDelete={this.deleteMessage} />;
-        }.bind(this));
-
-        return (
-          <div className="container jumbotron" style={inlineStyles}>
-            <h2>Hello, World!</h2>
-            <input ref="newMessage" type="text" />
-            <button className="btn btn-primary" onClick={this.handleAdd}>Add</button>
-            { messages }
-          </div>
-        );
-      }
-    });
-
-    var SubMessage = React.createClass({
-
-      handleDelete: function(e) {
-        this.props.onDelete(this.props.message);
-      },
-
-      propTypes: {
-        message: React.PropTypes.string.isRequired
-      },
-
-      getDefaultProps: function() {
-        return {
-          message: 'So good to see you'
-        };
-      },
-
-      render: function() {
-        return (
-          <div>
-            {this.props.message}
-            <button className="btn btn-danger" onClick={this.handleDelete}>x</button>
-          </div>
-        );
-      }
-    });
-
-    React.render(
-      <MessageBox />,
-      document.getElementById('app')
-    );
-  </script>
+  <script src="build/app.js"></script>
 </body>
 </html>
